--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       if: matrix.python-version == 3.9
     - name: Install documentation dependencies
       run: |
-        python -m pip install -r <(python -c "import yaml; print('\n'.join(yaml.safe_load(open('environment_docs.yaml'))['dependencies']))")
+        if [ -f requirements_docs.txt ]; then pip install -r requirements_docs.txt; fi
       if: matrix.python-version == 3.9
     - name: Build docs 🏗️
       run: make docs
