--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,21 +13,18 @@ sphinx:
   fail_on_warning: true
 
 # Optionally build your docs in additional formats such as PDF and ePub
-formats: all
+formats: []
 
-# Optionally set the version of Python and requirements required to build your docs
+# Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
-    python: mambaforge-22.9
+    python: "mambaforge-22.9"
 
 conda:
   environment: environment-docs.yml
 
 # Optionally set the version of Python and requirements required to build your docs
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - dev
+# python:
+#  install:
+#    - requirements: requirements_docs.txt
