--- a/environment.yml
+++ b/environment.yml
@@ -4,14 +4,14 @@ channels:
 - defaults
 dependencies:
 - pip
-- python>=3.8,<3.12
-- pywps>=4.5.1,<4.6
+- python>=3.9,<3.11
+- pywps>=4.5.2,<4.7
 - jinja2
 - click
 - psutil
 - birdhouse-birdy
-- tigramite
-- tefs
+#- tigramite
+#- tefs
 - pandas
 - scikit-learn
 - numpy
