--- a/environment-docs.yml
+++ b/environment-docs.yml
@@ -5,6 +5,7 @@ channels:
 - defaults
 dependencies:
 - pip
+- python>=3.9,<3.11
 - pywps>=4.4
 - sphinx
 - nbsphinx
@@ -13,3 +14,6 @@ dependencies:
 - pandas
 - tigramite
 - tefs
+- pip:
+    - tigramite
+    - tefs
